--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Good Morning</title>
 </head>
 <body>
     <h1>Good Morning</h1>
+    <audio src="./img/SWD64ZV-good-morning.mp3" autoplay loop></audio>
     <div class="wrapper">
         
 <div class="main">
+    <div><img src="./img/Sushan Logo.jpg" alt=""></div>
     <div class="circle">c</div>
     <div class="handle">h
         
@@ -21,6 +23,13 @@
 <div class="plate">
     p
 </div>
+<div class="eva">sm</div>
+<div class="eva2">sm</div>
+<div class="eva3">sm</div>
+<div class="eva4">sm</div>
+<div class="eva5">sm</div>
+
+
     </div>
 </body>
 </html>
